--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,18 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
+    <script src="env/config.json"></script>
     <script src="scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <input type="text"><button type ="button" id="send">Submit Bitches</button>
+      <center><div id="chatbox"></div></center>
     </div>
   </body>
 </html>
+
