--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,12 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <input type="text"><button type ="button" id="send">Submit Bitches</button>
+      <input class="inputMsg" type="text" value="Text"><button type ="button" id="send">Submit Bitches</button>
+      <button type ="button" id="refresh">Refresh</button>
+      <button type ="button" id="autoRefresh">Auto-Refresh</button>
+      <input class="inputRoom" type="text" value="Room Name">
+      <button type ="button" id="createRoom">Create Room</button>
+      <button type ="button" id="joinRoom">Join Room</button>
       <center><div id="chatbox"></div></center>
     </div>
   </body>
