Partial Backbone re-implementation - Not Tested - Please Solo over NY

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,8 @@
       <input class="inputMsg" type="text" value="Text">
       <button type ="button" id="send">Submit Bitches</button><br>
       <input class="inputRoom" type="text" value="default">
-      <button type ="button" id="joinRoom">Join Room</button>
+      <button type ="button" id="createRoom">Create Room</button>
+      <div class = "roomButtons"></div>
       <center><div id="chatbox"></div></center>
     </div>
     <script src="scripts/app.js"></script>
